# pros-core

./: .gitignore  README.md  pyproject.toml
pros_core/: __init__.py  auth.py  models.py  setup_app.py
pros_core/api/: v1.py
pros_core/query_utils/: query_builders.py
pros_core/setup_utils/: __init__.py  build_app_model_definitions.py  build_pydantic_return_models.py  build_routers.py  import_models.py  import_routers.py  model_manager.py
tests/: __init__.py  conftest.py  start_neo4j.sh  test_api.py  test_database.py  test_pydantic_return_models.py  test_setup.py  utils.py
tests/testing_app/app/: main.py
tests/testing_app/app/core/: config.py
tests/testing_app/test_app/: models.py
tests/testing_app/test_app/api/: v1.py
